Value of a local variable is not used.